--- a/new.html
+++ b/new.html
@@ -113,6 +113,53 @@
                     </div>
                   </div>
                 </div>
+                <section>
+                  <div class="container">
+                    <!--title-->
+                    <div class="row">
+                      <div class="col text-center">
+                        <h1 class="display-4 text-uppercase text-dark mb-0 ">
+                          <strong>Projects</strong></h1>
+                          <div class="title-underline bg-danger"></div>
+                        </div>
+                      </div>
+                      <!--end of title-->
+                      <div class="row py-3">
+                        <!--single project-->
+                      <div class="col-sm-6 col-md-4 my-3">
+                        <img src="img/project-1.jpeg" class="img-fluid rounded" alt="">
+                      </div>
+                          <!--end of single project-->
+                          <!--single project-->
+                        <div class="col-sm-6 col-md-4 my-3">
+                          <img src="img/project-2.jpeg" class="img-fluid img-thumbnail bg-danger border border-danger" alt="">
+                        </div>
+                            <!--end of single project-->
+                            <!--single project-->
+                          <div class="col-sm-6 col-md-4 my-3 mx-auto">
+                            <img src="img/project-3.jpeg" class="img-fluid rounded-circle" alt="">
+                          </div>
+                              <!--end of single project-->
+                    </div>
+                    <div class="row py-3 no-gutters">
+                        <!--single project-->
+                      <div class="col-sm-6 col-md-4 my-3">
+                        <img src="img/project-1.jpeg" class="img-fluid " alt="">
+                      </div>
+                          <!--end of single project-->
+                          <!--single project-->
+                        <div class="col-sm-6 col-md-4 my-3">
+                          <img src="img/project-2.jpeg" class="img-fluid " alt="">
+                        </div>
+                            <!--end of single project-->
+                            <!--single project-->
+                          <div class="col-sm-6 col-md-4 my-3 mx-auto">
+                            <img src="img/project-3.jpeg" class="img-fluid" alt="">
+                          </div>
+                              <!--end of single project-->
+                    </div>
+                   </div>
+                </section>
                 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
                 <script src="./js/jquery-3.3.1.min.js"></script>
                 <!-- Bootstrap JS  -->
