--- a/new.html
+++ b/new.html
@@ -160,6 +160,16 @@
                     </div>
                    </div>
                 </section>
+                <section>
+                   <!--title-->
+                   <div class="row">
+                    <div class="col text-center">
+                      <h1 class="display-4 text-uppercase text-dark mb-0 ">
+                        <strong>Team</strong></h1>
+                        <div class="title-underline bg-danger"></div>
+                      </div>
+                    </div>
+                </section>
                 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
                 <script src="./js/jquery-3.3.1.min.js"></script>
                 <!-- Bootstrap JS  -->
